--- a/pages/contact.html
+++ b/pages/contact.html
@@ -40,7 +40,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page"
+                            <a class="nav-link"
                                 href="https://misionessabor.com/index">Inicio</a>
                         </li>
                         <li class="nav-item">
@@ -52,7 +52,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="https://misionessabor.com/pages/wholesale">Venta al por mayor</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item active" aria-current="page">
                             <a class="nav-link" href="https://misionessabor.com/pages/contact">Contacto</a>
                         </li>
                     </ul>
