--- a/pages/shop.html
+++ b/pages/shop.html
@@ -36,10 +36,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page"
+                            <a class="nav-link"
                                 href="https://misionessabor.com/index">Inicio</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item active" aria-current="page" >
                             <a class="nav-link" href="https://misionessabor.com/pages/shop">Productos</a>
                         </li>
                         <li class="nav-item">
